--- a/doc/orchaRd.Rmd
+++ b/doc/orchaRd.Rmd
@@ -97,7 +97,7 @@ orchard_plot(res1, xlab = "Standardised mean difference", transfm = "none") +
 
 Figures \ref{fig:Figure1} & \ref{fig:Figure2} above show that overall estimate from a random-effects meta-analysis of 77 effect sizes is centered on zero, with a 95% CI that spans the line of no-effect. The prediction intervals clearly demonstrate the high level of heterogeneity, with effects size less than -0.5 and greater than 0.5 predicted to be observed. 
 
-In a subsequent publication, Senior et al. (2017) analysed this dataset for effects of dietary-restriction on among-individual variation in the age at death using the log coefficient of variation ratio. A major prediction in both English & Uller (2016) and Senior et al. (2017) was that the type pf manipulation, whether the study manipulated quality of food versus the quantity of food would be important. As such, we can fit a meta-regression model to test whether the moderator "Manipulation Type" impacts our results on the mean and variance
+In a subsequent publication, Senior et al. (2017) analysed this dataset for effects of dietary-restriction on among-individual variation in the age at death using the log coefficient of variation ratio. A major prediction in both English & Uller (2016) and Senior et al. (2017) was that the type pf manipulation, whether the study manipulated quality of food versus the quantity of food would be important. As such, we can fit a meta-regression model to test whether the moderator "Manipulation Type" impacts our results on the mean and variance. Note that we need a meta-regression model with a categorical varaible for `orchard_plot` (i.e. the intercept less model). 
 
 ```{r Figure3, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure3}Orchard plot of diet qualities impact on SMD (top) and log coefficient of variation (bottom)"}
 # First we need to calculate the lnCVR
@@ -106,8 +106,13 @@ english <- escalc(measure = "CVR", n1i = NStartControl, sd1i = SD_C, m1i = MeanC
                         var.names=c("lnCVR","vlnCVR"),
                         data = english)
 
+# Now we can fit the meta-regression model (contrast)
+english_MR0 <- rma.mv(yi = SMD, V = vSMD, mods = ~ ManipType, 
+                     random = list(~ 1 | StudyNo, ~ 1 | EffectID), data = english)
+summary(english_MR0)
 
-# Now we can fit the meta-regression models
+# Now we can fit the meta-regression model without the intercept
+# we need this intercept-less model for the orchard plot
 english_MR <- rma.mv(yi = SMD, V = vSMD, mods = ~ ManipType - 1, 
                      random = list(~ 1 | StudyNo, ~ 1 | EffectID), data = english)
 summary(english_MR)
@@ -116,7 +121,14 @@ summary(english_MR)
 res2 <- mod_results(english_MR, mod = "ManipType")
 print(res2)
 
-# Lets fit a meta-regression - I am modelling non-independence here (article).
+# we fit a meta-regression (contrast)
+senior_MR0 <- rma.mv(
+  yi = lnCVR, V = vlnCVR, mods = ~ ManipType, random = list(~ 1 | StudyNo, ~ 1 | EffectID),
+  data = english
+)
+summary(senior_MR0)
+
+# Let's fit a meta-regression without the intercept
 senior_MR <- rma.mv(
   yi = lnCVR, V = vlnCVR, mods = ~ ManipType - 1, random = list(~ 1 | StudyNo, ~ 1 | EffectID),
   data = english
@@ -128,7 +140,7 @@ res3 <- mod_results(senior_MR, "ManipType")
 print(res3)
 
 
-# We can now plot SMD and lnCVR beside each other and compar ethe results
+# We can now plot SMD and lnCVR beside each other and compare the results
 p1 <- orchard_plot(english_MR, 
                    mod = "ManipType", xlab = "Standardised mean difference", 
                    transfm = "none")
@@ -154,18 +166,32 @@ Here again, we can create orchard plots of the model results, but we'll show how
 data(eklof)
 
 # Calculate the effect size
-eklof<-escalc(measure="ROM", n1i=N_control, sd1i=SD_control, m1i=mean_control, 
-  n2i=N_treatment, sd2i=SD_treatment, m2i=mean_treatment, data=eklof)
+eklof <- escalc(
+  measure = "ROM", n1i = N_control, sd1i = SD_control, m1i = mean_control,
+  n2i = N_treatment, sd2i = SD_treatment, m2i = mean_treatment,
+  var.names = c("lnRR", "vlnRR"),
+  data = eklof
+)
 
 # Add the unit level predictor
-eklof$Datapoint<-as.factor(seq(1, dim(eklof)[1], 1))
+eklof$Datapoint <- as.factor(seq(1, dim(eklof)[1], 1))
 
 # Also, we can get the sample size, which we can use for weighting if we would like
-eklof$N <- rowSums(eklof[,c("N_control", "N_treatment")])
+eklof$N <- rowSums(eklof[, c("N_control", "N_treatment")])
 
-# fit a MLMR - accouting for some non-independence
-eklof_MR<-rma.mv(yi=yi, V=vi, mods=~ Grazer.type-1, random=list(~1|ExptID, ~1|Datapoint), 
-  data=eklof)
+# fit a meta-regression with the intercept (contrast)
+eklof_MR0 <- rma.mv(
+  yi = lnRR, V = vlnRR, mods = ~ Grazer.type - 1, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
+  data = eklof
+)
+
+summary(eklof_MR0 )
+
+# fit a meta-regression without the intercept
+eklof_MR <- rma.mv(
+  yi = lnRR, V = vlnRR, mods = ~ Grazer.type - 1, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
+  data = eklof
+)
 
 ```
 
@@ -183,7 +209,7 @@ p3/p4
 
 ```
 
-The other thing we can change is the type of scaling we wish to use. Lets say we are interested in scaling the effect size by the total sample size of the study we use a vector of N, sample size (bottom of Figure \ref{fig:Figure5}):
+The other thing we can change is the type of scaling we wish to use. Let's say we are interested in scaling the effect size by the total sample size of the study we use a vector of N, sample size (bottom of Figure \ref{fig:Figure5}):
 
 ```{r Figure5, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure5}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes and scaling with sample size instead of precision"}
 
@@ -197,58 +223,61 @@ p5/p6
 
 ```
 
-Overall, our orchard plot shows the results of a re-analysis of their data. The effects are negative for both Gastropods and Amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest, and is statistically significant, for Amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
+Overall, our orchard plot shows the results of a re-analysis of their data. The estiamted mean effects are negative for both gastropods and amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest, and is statistically significant, for amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
 
 #### Example 3: Maternal-Offspring Morphological Correlations
 
 Finally, we also look at the case discussed by Lim et al. (2014), who meta-analysed the strength of correlation between maternal and offspring size within-species, across a very wide range of taxa. The found, that typically, there is a moderate positive correlation between maternal size and offspring size within species (i.e. larger mothers have larger offspring). However, they also found evidence for relatively strong phylogenetic effects suggesting the strength of the association is dependent on evolutionary lineage.
 
-Here we have used an orchard plot to represent the results obtained when meta-analysing the data from Lim et al. (2014) by taxonomic Phylum. 
+Here, we have used an orchard plot to represent the results obtained when meta-analysing the data from Lim et al. (2014) by taxonomic phyla. 
 
 ```{r echo = TRUE, eval = TRUE}
-	data(lim)
+data(lim)
 
 # Add in the sampling variance
-	lim$vi<-(1/sqrt(lim$N - 3))^2
+lim$vi <- 1 / (lim$N - 3)
 
-# Lets fit a meta-regression - I will do Article non-independence. The phylogenetic model found phylogenetic effects, however, instead we could fit Phylum as a fixed effect and explore them with an Orchard Plot
-lim_MR<-metafor::rma.mv(yi=yi, V=vi, mods=~Phylum-1, random=list(~1|Article, ~1|Datapoint), data=lim)
+# Let's fit a meta-regression. The phylogenetic model found phylogenetic effects, however, instead we could fit Phylum as a fixed effect and explore them with an Orchard Plot
+lim_MR <- rma.mv(yi = yi, V = vi, mods = ~ Phylum - 1, random = list(~ 1 | Article, ~ 1 | Datapoint), data = lim)
 summary(lim_MR)
 ```
 
 Noe we can plot a default orchard plot, scaling each effect size by N. Also, because we are using Zr, we can use transfm = "tanh" and it will do the conversions for us:
 
 ```{r Figure6, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure6}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
-	orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient", 
-    alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = FALSE)
+orchard_plot(lim_MR,
+  mod = "Phylum", xlab = "Correlation coefficient",
+  alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = FALSE
+)
 ```
 
-Now that we have Figure \ref{fig:Figure6} we can do some small changes to make it pretty. Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot` we can add element to the figure to make it look pretty. 
+Now that we have Figure \ref{fig:Figure6} we can do some small changes to make it pretty. Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot2` we can add element to the figure to make it look pretty. 
 
 ```{r Figure7, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure7}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
-	orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)", alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = TRUE) +
+orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)", 
+             transfm = "tanh", angle = 45, N = lim$N, cb = TRUE) +
+  theme(
+    legend.position = c(0.05, 0.99),
 
-    theme(legend.position= c(0.05, 0.99), 
-        
-        legend.justification = c(0,1), 
-        
-        legend.key.size = unit(1, "mm")) +
+    legend.justification = c(0, 1),
 
-  	theme(legend.direction="horizontal", 
-      
-      legend.title = element_text(size =8),
-      
-      legend.text = element_text(size = 10)) + 
+    legend.key.size = unit(1, "mm")) +
+  theme(
+    legend.direction = "horizontal",
 
-  	scale_x_continuous(expand = c(0.1,0.1))
+    legend.title = element_text(size = 8),
+
+    legend.text = element_text(size = 10)) +
+
+  scale_x_continuous(expand = c(0.1, 0.1))
 ```
 
-As in Figure \ref{fig:Figure7}, New elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements. From our orchard plots above, it is clear that the analysis is dominated by data from Chordates and Arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in Chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
+As in Figure \ref{fig:Figure7}, New elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements. From our orchard plots above, it is clear that the analysis is dominated by data from chordates and arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
 
 \newpage
 # References 
 
-Eklof J.S., Alsterberg C., Havenhand J.N., Sundback K., Wood H.L., Gamfeldt L. 2012. Experimental climate change weakens the insurance effect of biodiversity. Ecology Letters, 15:864-872.
+Eklof J.S., Alsterberg C., Havenhand J.N., Sundback K., Wood H.L., Gamfeldt L. 2012. Experimental climate change weakens the insurance effect of biodiversity. Ecology Letters, 15:864-872. https://doi.org/10.1111/j.1461-0248.2012.01810.x
 
 English S, Uller T. 2016. Does early-life diet affect longevity? A meta-analysis across experimental studies. Biology Letters, 12: http://doi:10.1098/rsbl.2016.0291
 
