Updates to documentation. Adding in new submerge function. Needs work, but will demonstarte what we need for now

--- a/doc/orchaRd.Rmd
+++ b/doc/orchaRd.Rmd
@@ -19,14 +19,13 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-`orchaRd` allows users to create pretty orchard plots that contain both confidence intervals (CIs) and prediction intervals (PIs) around point estimates for different categories, plots the effect size distribution over top such estimates and weights effect sizes by their precision (1/standard error, SE) or sample size. `orchaRd` takes a `metafor` object of class `rma.mv` or `rma` (Viechtbauer, 2010) and plots the results for the meta-analytic or meta-regression model. Currently, only meta-regression models with a single moderator variable are allowed or intercept only meta-analytic models. `orchaRd` uses `ggplot2` (Wickham, 2009) for plotting, and as such, layers can be added directly to make plots customizable to the users needs.
+`orchaRd` allows users to create pretty orchard plots that contain both confidence intervals (CIs) and prediction intervals (PIs) around point estimates for different categorical moderators, plots the effect size distribution over top such estimates and weights effect sizes by their precision (1/standard error, SE) or sample size. `orchaRd` takes a `metafor` object of class `rma.mv` or `rma` (Viechtbauer, 2010) and plots the results for the meta-analytic or meta-regression model. Currently, only meta-regression models with a single moderator variable are allowed or intercept only meta-analytic models. `orchaRd` uses `ggplot2` (Wickham, 2009) for plotting, and as such, layers can be added directly to make plots customizable to the users needs.
 
 # Citing orchaRd
 
 To cite `orchaRd` in publications one can use the following reference:
 
-Nakagawa, S. et al. 2020. The Orchard Plot: Cutlivatinng Forest Plots 
-for Use in Ecology, Evolution and Beyond. *Research Synthesis Methods*, in review
+Nakagawa, S. et al. 2020. The Orchard Plot: Cultivating Forest Plots for Use in Ecology, Evolution and Beyond. *Research Synthesis Methods*, in review
 
 # Installation
 
@@ -53,7 +52,7 @@ In this vignette we'll walk the reader through a number of case studies and show
 
 #### Example 1: Dietary Restriction and Lifespan
 
-English and Uller (2016) performed a systematic review and meta-analysis on the effects of early life dietary restriction (a reduction in a major component of the diet without malnutrition; e.g. caloric restriction) on average at death, using the standardised mean difference (often called *d*). They found that across the whole dataset, there was little evidence for an effect of dietary restriction on mean age at death. Here we'll use the dataset to first calculate the effect size measures and then fit an intercept only, meta-analytic model.
+English and Uller (2016) performed a systematic review and meta-analysis on the effects of early life dietary restriction (a reduction in a major component of the diet without malnutrition; e.g. caloric restriction) on average age at death, using the standardised mean difference (often called *d*). They found that, across the whole dataset, there was little evidence for an effect of dietary restriction on mean age at death. Here we'll use the dataset to first calculate the effect size measures and then fit an intercept only, meta-analytic model.
 
 ```{r echo = TRUE, eval = TRUE}
 
@@ -64,8 +63,8 @@ english <- escalc(measure = "SMD", n1i = NStartControl, sd1i = SD_C, m1i = MeanC
                   var.names=c("SMD","vSMD"),
                   data = english)
 
-english_MR_int <- rma.mv(yi = SMD, V = vSMD, random = list( ~ 1 | StudyNo, ~ 1 | EffectID), data = english)
-summary(english_MR_int)
+english_MA_int <- rma.mv(yi = SMD, V = vSMD, random = list( ~ 1 | StudyNo, ~ 1 | EffectID), data = english)
+summary(english_MA_int)
 
 ```
 
@@ -73,7 +72,7 @@ We have fit a meta-analytic model and thus the only estimate we see is the overa
 
 ```{r echo = TRUE, eval = TRUE}
 
-res1 <- mod_results(english_MR_int, mod="Int")
+res1 <- mod_results(english_MA_int, mod="Int")
 print(res1)
  
 ```
@@ -81,13 +80,13 @@ print(res1)
 If we instead want to create an orchard plot and visualise the results we can do so quite simply as:
 
 ```{r Figure1, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "\\label{fig:Figure1}Orchard plot of the impact caloric restriction using standardised mean difference"}
-orchard_plot(english_MR_int,
+orchard_plot(english_MA_int,
   mod = "Int", xlab = "Standardised mean difference",
   transfm = "none"
 ) 
 ```
 
-In \ref{fig:Figure1}, we simply add in the metafor model and it will create a default orchard plot. Alternatively, we could also add in the table of results, and try to change the colour of the 'trunk' (estimate) and 'fruit' (effect sizes) from the defult (orange) to grey by just adding `ggplot` functions.
+In \ref{fig:Figure1}, we simply add in the metafor model and it will create a default orchard plot. Alternatively, we could also add in the table of results, and try to change the colour of the 'trunk' (estimate) and 'fruit' (effect sizes) from the default (orange) to grey by just adding `ggplot` functions.
 
 ```{r Figure2, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "\\label{fig:Figure2}Orchard plot of the impact caloric restriction using standardised mean difference but instead of using the metafor model, using the model results table", messages = FALSE, warnings = FALSE}
 orchard_plot(res1, xlab = "Standardised mean difference", transfm = "none") +
@@ -95,9 +94,9 @@ orchard_plot(res1, xlab = "Standardised mean difference", transfm = "none") +
   scale_colour_manual(values = "grey")
 ```
 
-Figures \ref{fig:Figure1} & \ref{fig:Figure2} above show that overall estimate from a random-effects meta-analysis of 77 effect sizes is centered on zero, with a 95% CI that spans the line of no-effect. The prediction intervals clearly demonstrate the high level of heterogeneity, with effects size less than -0.5 and greater than 0.5 predicted to be observed. 
+Figures \ref{fig:Figure1} & \ref{fig:Figure2} above show that overall estimate from a random-effects meta-analysis of 77 effect sizes is centered on zero, with a 95% CI that spans the line of no-effect. The prediction intervals clearly demonstrate the high level of heterogeneity, with effect sizes less than -0.5 and greater than 0.5 predicted to be observed. 
 
-In a subsequent publication, Senior et al. (2017) analysed this dataset for effects of dietary-restriction on among-individual variation in the age at death using the log coefficient of variation ratio. A major prediction in both English & Uller (2016) and Senior et al. (2017) was that the type pf manipulation, whether the study manipulated quality of food versus the quantity of food would be important. As such, we can fit a meta-regression model to test whether the moderator "Manipulation Type" impacts our results on the mean and variance. Note that we need a meta-regression model with a categorical varaible for `orchard_plot` (i.e. the intercept less model). 
+In a subsequent publication, Senior et al. (2017) analysed this dataset for the effects of dietary-restriction on among-individual variation in the age at death using the log coefficient of variation ratio. A major prediction in both English & Uller (2016) and Senior et al. (2017) was that the type of manipulation, whether the study manipulated quality of food versus the quantity of food would be important. As such, we can fit a meta-regression model to test whether the moderator "Manipulation Type" impacts our results on the mean and variance. Note that we need a meta-regression model with a categorical variable for `orchard_plot` (i.e. the intercept less model). 
 
 ```{r Figure3, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure3}Orchard plot of diet qualities impact on SMD (top) and log coefficient of variation (bottom)"}
 # First we need to calculate the lnCVR
@@ -121,7 +120,7 @@ summary(english_MR)
 res2 <- mod_results(english_MR, mod = "ManipType")
 print(res2)
 
-# we fit a meta-regression (contrast)
+# we fit a meta-regression (contrast) for the log coefficient of variation
 senior_MR0 <- rma.mv(
   yi = lnCVR, V = vlnCVR, mods = ~ ManipType, random = list(~ 1 | StudyNo, ~ 1 | EffectID),
   data = english
@@ -147,13 +146,44 @@ p1 <- orchard_plot(english_MR,
 
 p2 <- orchard_plot(senior_MR,
   mod = "ManipType", xlab = "log(CV ratio) (lnCVR)",
-  transfm = "none"
-)
+  transfm = "none")
 
 p1 / p2
 ```
 
 Our orchard plot for the log coefficient of variation demonstrates that, while restrictions on dietary quality and quantity do not affect the average age at death (top of Figure \ref{fig:Figure3}), among-individual variation may be altered by quality restrictions (bottom of Figure \ref{fig:Figure3}). The effect is negative suggesting that the coefficient of variation in the control group is lower than that in the treatment group, and the 95% CI does not span zero. Again though, the effect is heterogeneous; a substantial number of positive effects are still predicted. 
+
+In many circumstances we want to present both the overall mean meta-analytic estimate (i.e., our intercept-only model) and the mean effect size in different levels of our categorical moderator variable. This provides overall support across all studies included in the meta-analysis while effects across different levels of our categorical variable provide more detailed information about how mean effect size might vary across different groups. 
+
+```{r Figure8, fig.width = 7, fig.height = 8, fig.cap = "\\label{fig:Figure8}Orchard plot of overall mean SMD for the impact of diet quality on lifespan (bottom) and the effect of different diet manipulations on lifespan (middle and bottom)"}
+
+# We will re-fit the meta-analytic and meta-regression models without the intercept just to remind the reader what models we would like to compare
+
+english_MA_int <- rma.mv(yi = SMD, V = vSMD, random = list( ~ 1 | StudyNo, ~ 1 | EffectID), data = english)
+
+summary(english_MA_int)
+
+english_MR <- rma.mv(yi = SMD, V = vSMD, mods = ~ ManipType - 1, 
+                     random = list(~ 1 | StudyNo, ~ 1 | EffectID), data = english)
+summary(english_MR)
+
+# Again, we can create a table of results for the various models
+res_english_MA_int <- mod_results(english_MA_int, mod = "Int")
+    res_english_MR <- mod_results(english_MR, mod = "ManipType")
+
+
+# Now, we can use the submerge function to merge together the mod_results so they can be plotted all together in the orchard plot
+res_MA_MR_merged <- submerge(res_english_MA_int, res_english_MR)
+print(res_MA_MR_merged)
+
+# We can now plot the overall SMD and the mean SMD in each level of the diet manipulation type. We will also re-label the "Intrcpt" to make it more clear that this refers to the overall meta-analytic mean.
+orchard_plot(res_MA_MR_merged, 
+                   mod = "ManipType", xlab = "Standardised mean difference", 
+                   transfm = "none") +
+scale_y_discrete(labels = c("Intrcpt" = "Overall"))
+
+```
+Figure \ref{fig:Figure8} now provides the overall mean estimate and the mean estimate in each level of the diet manipulation categories in one figure. These combined figures are more typical of what readers can expect in meta-analytic papers.
 
 #### Example 2: Predation and Invertebrate Community 
 
@@ -173,7 +203,7 @@ eklof <- escalc(
   data = eklof
 )
 
-# Add the unit level predictor
+# Add the observation level factor
 eklof$Datapoint <- as.factor(seq(1, dim(eklof)[1], 1))
 
 # Also, we can get the sample size, which we can use for weighting if we would like
@@ -181,13 +211,13 @@ eklof$N <- rowSums(eklof[, c("N_control", "N_treatment")])
 
 # fit a meta-regression with the intercept (contrast)
 eklof_MR0 <- rma.mv(
-  yi = lnRR, V = vlnRR, mods = ~ Grazer.type - 1, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
+  yi = lnRR, V = vlnRR, mods = ~ Grazer.type, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
   data = eklof
 )
 
-summary(eklof_MR0 )
+summary(eklof_MR0)
 
-# fit a meta-regression without the intercept
+# fit a meta-regression without the intercept and we can use this model for the orchard plot
 eklof_MR <- rma.mv(
   yi = lnRR, V = vlnRR, mods = ~ Grazer.type - 1, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
   data = eklof
@@ -195,7 +225,7 @@ eklof_MR <- rma.mv(
 
 ```
 
-Above we have fit a meta-regression model using "Grazer Type" as a moderator which is predicted to explain variation in log response ratios. We can demonstrate a few simple changes users can make, but we note here that users can make far more complex changes down the line if needed, but we'll save those for the last example. The first is the angle at which the y-axis labels are positioned (bottom of Figure \ref{fig:Figure4}):
+Above we have fit a meta-regression model using "Grazer Type" as a moderator which is predicted to explain variation in log response ratios. We can demonstrate a few simple changes users can make, but we note here that users can make far more complex changes down the line if needed, but we'll save explaining these more complex changes for the last example. The first is the angle at which the y-axis labels are positioned (bottom of Figure \ref{fig:Figure4}):
 
 ```{r Figure4, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure4}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes"}
 
@@ -223,11 +253,11 @@ p5/p6
 
 ```
 
-Overall, our orchard plot shows the results of a re-analysis of their data. The estiamted mean effects are negative for both gastropods and amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest, and is statistically significant, for amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
+Overall, our orchard plot shows the results of a re-analysis of their data. The estimated mean effects are negative for both gastropods and amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest, and is statistically significant, for amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
 
 #### Example 3: Maternal-Offspring Morphological Correlations
 
-Finally, we also look at the case discussed by Lim et al. (2014), who meta-analysed the strength of correlation between maternal and offspring size within-species, across a very wide range of taxa. The found, that typically, there is a moderate positive correlation between maternal size and offspring size within species (i.e. larger mothers have larger offspring). However, they also found evidence for relatively strong phylogenetic effects suggesting the strength of the association is dependent on evolutionary lineage.
+Finally, we also look at the case discussed by Lim et al. (2014), who meta-analysed the strength of correlation between maternal and offspring size within-species, across a very wide range of taxa. They found that typically there is a moderate positive correlation between maternal size and offspring size within species (i.e. larger mothers have larger offspring). However, they also found evidence for relatively strong phylogenetic effects suggesting the strength of the association is dependent on evolutionary lineage.
 
 Here, we have used an orchard plot to represent the results obtained when meta-analysing the data from Lim et al. (2014) by taxonomic phyla. 
 
@@ -242,7 +272,7 @@ lim_MR <- rma.mv(yi = yi, V = vi, mods = ~ Phylum - 1, random = list(~ 1 | Artic
 summary(lim_MR)
 ```
 
-Noe we can plot a default orchard plot, scaling each effect size by N. Also, because we are using Zr, we can use transfm = "tanh" and it will do the conversions for us:
+Now we can plot a default orchard plot, scaling each effect size by N. Also, because we are using Zr, we can use transfm = "tanh" and it will do the conversions for us:
 
 ```{r Figure6, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure6}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
 orchard_plot(lim_MR,
@@ -251,7 +281,7 @@ orchard_plot(lim_MR,
 )
 ```
 
-Now that we have Figure \ref{fig:Figure6} we can do some small changes to make it pretty. Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot2` we can add element to the figure to make it look pretty. 
+Now that we have Figure \ref{fig:Figure6} we can do some small changes to make it pretty. Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot2` we can add elements to the figure to make it look pretty. 
 
 ```{r Figure7, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure7}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
 orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)", 
@@ -272,7 +302,9 @@ orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)",
   scale_x_continuous(expand = c(0.1, 0.1))
 ```
 
-As in Figure \ref{fig:Figure7}, New elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements. From our orchard plots above, it is clear that the analysis is dominated by data from chordates and arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
+As in Figure \ref{fig:Figure7}, New elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements, often telling you it does so with warning messages (these are nothing to be concerned about in most cases). 
+
+From our orchard plots above, it is clear that the analysis is dominated by data from chordates and arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
 
 \newpage
 # References 
